// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallPulseRound> <BallPulseRound> Mount: enzyme.mount 1`] = `
.css-1lgrkv4 > div,
[data-css-1lgrkv4] > div {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_v07k1z 1.2s infinite ease-in-out;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_v07k1z 1.2s infinite ease-in-out;
}

<BallPulseRound
  loading={true}
>
  <div
    data-css-1lgrkv4=""
  >
    <div />
  </div>
</BallPulseRound>
`;

exports[`<BallPulseRound> <BallPulseRound> Render: enzyme.render 1`] = `
.css-1lgrkv4 > div,
[data-css-1lgrkv4] > div {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_v07k1z 1.2s infinite ease-in-out;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_v07k1z 1.2s infinite ease-in-out;
}

<div
  data-css-1lgrkv4=""
>
  <div />
</div>
`;

exports[`<BallPulseRound> <BallPulseRound> Shallow: enzyme.shallow 1`] = `
.css-1lgrkv4 > div,
[data-css-1lgrkv4] > div {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_v07k1z 1.2s infinite ease-in-out;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_v07k1z 1.2s infinite ease-in-out;
}

<div
  data-css-1lgrkv4=""
>
  <div />
</div>
`;
